[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iomt-heart-sound-backend"
version = "0.1.0"
description = "Doctor-facing heart sound measurement backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "bleak>=0.22,<1.0",
  "fastapi>=0.115,<1.0",
  "librosa>=0.10,<1.0",
  "numpy>=1.26,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyWavelets>=1.6,<2.0",
  "pydantic-settings>=2.3,<3.0",
  "scikit-learn>=1.5,<2.0",
  "scipy>=1.13,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
